--- a/index.html
+++ b/index.html
@@ -39,64 +39,89 @@
     </section>
 
     <!-- Accordion/Drop bars -->
-    <section class="accordion-area">
+ <section class="accordion-area">
 
-      <details id="skills" class="accordion" >
-        <summary class="accordion-summary">Skills</summary>
-        <div class="accordion-panel">
-          <div class="tags">
-            <span class="tag">IT Support</span>
-            <span class="tag">Troubleshooting</span>
-            <span class="tag">Adaptability</span>
-            <span class="tag">Communication</span>
-            <span class="tag">Continuous Learning</span>
-            <span class="tag">Team Collaboration</span>
-          </div>
-        </div>
-      </details>
+  <details id="skills" class="accordion">
+    <summary class="accordion-summary">Skills</summary>
+    <div class="accordion-panel">
+      <div class="tags">
+        <span class="tag">IT Support</span>
+        <span class="tag">Troubleshooting</span>
+        <span class="tag">Adaptability</span>
+        <span class="tag">Communication</span>
+        <span class="tag">Continuous Learning</span>
+        <span class="tag">Team Collaboration</span>
+      </div>
+    </div>
+  </details>
 
-      <details id="experience" class="accordion">
-        <summary class="accordion-summary">Experience</summary>
-        <div class="accordion-panel">
-          <p>Seeking first major role in IT support. Experienced in academic tech projects,
-            hands-on troubleshooting, and collaborative environments.</p>
 
-          <div class="exp-item">
-            <strong>2023 - 2024 — Shell.co — Junior Programmer</strong>
-            <p>Worked with the development team and managed website backend tasks.</p>
-          </div>
+  <!-- UPDATED EXPERIENCE SECTION -->
+  <details id="experience" class="accordion">
+    <summary class="accordion-summary">Experience</summary>
+    <div class="accordion-panel">
 
-          <div class="exp-item">
-            <strong>2022 - 2023 — Fanta.co — Web Designer</strong>
-            <p>Managed website design, content, branding and logo design while collaborating with the development team.</p>
-          </div>
-        </div>
-      </details>
+      <div class="exp-item">
+        <strong>2024 – 2025 — NexaCore Systems — IT Support Trainee</strong>
+        <p>Provided on-site hardware diagnostics, assisted with ticket logging, resolved minor system failures, and collaborated with senior technicians to improve user workflow performance.</p>
+      </div>
 
-      <details id="education" class="accordion">
-        <summary class="accordion-summary">Education</summary>
-        <div class="accordion-panel">
-          <div class="edu-item">
-            <strong>New Era University (Main Campus)</strong>
-            <div>Bachelor’s Program — 2nd Year College</div>
-            <div class="muted">2024–2026</div>
-          </div>
-        </div>
-      </details>
+      <div class="exp-item">
+        <strong>2023 – 2024 — ByteShift Digital — Technical Intern</strong>
+        <p>Supported the development team by performing device configuration, software installation, and running basic system health scripts. Helped streamline digital onboarding for new users.</p>
+      </div>
 
-      <details id="awards" class="accordion">
-        <summary class="accordion-summary">Awards & Certifications</summary>
-        <div class="accordion-panel">
-          <ul class="cert-list">
-            <li>
-              <strong>SQL and Relational Databases 101</strong> —
-              <a href="https://courses.cognitiveclass.ai/certificates/1c1113cac2374ba8bbf24688eaf6d355" target="_blank" rel="noopener">View Certificate</a>
-            </li>
-          </ul>
-        </div>
-      </details>
+      <div class="exp-item">
+        <strong>2022 – 2023 — OmniServe Tech Hub — Junior Technical Assistant</strong>
+        <p>Handled initial troubleshooting for customer-reported issues, documented solution patterns, and assisted supervisors during network maintenance drills.</p>
+      </div>
 
-    </section>
+    </div>
+  </details>
+
+
+
+  <!-- NEW QUALIFICATIONS SECTION -->
+  <details id="qualifications" class="accordion">
+    <summary class="accordion-summary">Qualifications</summary>
+    <div class="accordion-panel">
+      <ul>
+        <li>Strong understanding of basic system administration</li>
+        <li>Capable of diagnosing common hardware & software issues</li>
+        <li>Experience working in collaborative team environments</li>
+        <li>Good command of written and verbal communication</li>
+        <li>Adaptable and quick to learn emerging technologies</li>
+      </ul>
+    </div>
+  </details>
+
+
+
+  <details id="education" class="accordion">
+    <summary class="accordion-summary">Education</summary>
+    <div class="accordion-panel">
+      <div class="edu-item">
+        <strong>New Era University (Main Campus)</strong>
+        <div>Bachelor’s Program — 2nd Year College</div>
+        <div class="muted">2024–2026</div>
+      </div>
+    </div>
+  </details>
+
+
+  <details id="awards" class="accordion">
+    <summary class="accordion-summary">Awards & Certifications</summary>
+    <div class="accordion-panel">
+      <ul class="cert-list">
+        <li>
+          <strong>SQL and Relational Databases 101</strong> —
+          <a href="https://courses.cognitiveclass.ai/certificates/1c1113cac2374ba8bbf24688eaf6d355" target="_blank">View Certificate</a>
+        </li>
+      </ul>
+    </div>
+  </details>
+
+</section>
   </main>
 
   <script>
